# mysql-analyzer-mcp

./: .env.example  README.md  build.sh  config.py  db_connector.py  mcp.py  mcp_config.json  patch_generator.py  pyproject.toml  requirements.txt
analyzers/: __init__.py  index_analyzer.py  naming_analyzer.py  performance_analyzer.py  schema_analyzer.py  utils.py
src/mysql_analyzer_mcp/: __init__.py  server.py
